cabal-version:       >=1.10
name:                stm-skip-chan
version:             0.1.0.0
synopsis:            STM based skip chan with combined read
homepage:            https://github.com/rehno-lindeque/stm-skip-chan
license:             BSD3
license-file:        LICENSE
author:              Rehno Lindeque
maintainer:          rehno.lindeque+code@gmail.com
category:            Concurrency
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Control.Concurrent.TSkipChan
  build-depends:       base >= 4
                     , stm >= 2.5
  hs-source-dirs:      src
  default-language:    Haskell2010
